Base 64, Octal, Bugfixes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                             <option>Decimal</option>
                             <option>Binary</option>
                             <option>Hex</option>
+                            <option>Base64</option>
+                            <option>Octal</option>
                         </select>
                     </div>
                     <div class="modal-footer">
