--- a/converter/index.html
+++ b/converter/index.html
@@ -23,6 +23,13 @@
 </div>
 
 <div id="workspace" class="container">
+    <form class="form-inline">
+        <div class="form-group">
+            <label for="inputWordSize">Word size</label>
+            <input type="number" min="2" max="64" class="form-control" id="inputWordSize" value="8">
+        </div>
+    </form>
+
     <div class="col-sm-3" id="row1">
     </div>
 
