--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src="node_modules/bootstrap-material-design/dist/js/material.min.js"></script>
-        <script src="http://aul12.bplaced.de/cdn/asyncLoader/asyncLoader.min.js"></script>
+        <script src="http://aul12.me/cdn/asyncLoader/asyncLoader.min.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
